kubernetes/manifest/service.yaml
# Service for the application
apiVersion: v1
kind: Service
metadata:
  name: go-web-app
  labels:
    app: go-web-app
spec: 
  selector:
    app: go-web-app
    type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
